--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -2,5 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-  p I am a morning person
+   p Welcome to #{title} 
+   p Interesting fact about me :- I am a morning person.
+   
